# audio-visualizer-pipewire

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buildAndRun.sh  fragment.fs  imgui.ini  notes.md  vertex.vs
src/: audio-processing.cc  audio-processing.h  audio-processor.h  audio-stream.cc  audio-stream.h  main.cc  main.cc.backup  processed-audio.h
